Version 1.3.0.1: * Fixed issue where code blocks were not visible in the Admin Console's light theme. * Fixed issue where the "unsaved changes" side bars scrolled offscreen when scrolling down.

--- a/WebProxy/WebProxy-Admin/src/themes.scss
+++ b/WebProxy/WebProxy-Admin/src/themes.scss
@@ -395,8 +395,8 @@
 	.code,
 	.icode
 	{
-		background-color: rgba(255,255,255,0.14);
-		color: rgba(255,255,255,0.82);
+		background-color: rgba(0,0,0,0.08);
+		color: rgba(0,0,0,1);
 	}
 
 	.topBar
